# tgd-header-lib

./: .clang-tidy  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
examples/: CMakeLists.txt  tgd-cat.cpp  tgd-export.cpp  tgd-filter.cpp  tgd-info.cpp  tgd-layer.cpp  tgd-list.cpp
include/tgd_header/: buffer.hpp  buffer_source.hpp  config.hpp  encoding.hpp  exceptions.hpp  file.hpp  file_sink.hpp  file_source.hpp  file_utils.hpp  layer.hpp  mmap_source.hpp  reader.hpp  stream.hpp  string_sink.hpp  tile.hpp  types.hpp  version.hpp
test/: CMakeLists.txt
test/include/: test.hpp
test/t/: test_buffer.cpp  test_encoding.cpp  test_endian.cpp  test_file_io.cpp  test_layer.cpp  test_memory_io.cpp  test_stream.cpp  test_tile.cpp
